change background based on media queries

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
         background: color image repeat position/size;
     */
 	background: var(--bg-url) no-repeat top center/cover;
+	height: 100vh;
 }
 
 body * {
@@ -128,21 +129,16 @@ ul {
 
 ul li a {
 	display: flex;
-	align-items: center;
+	/* align-items: center; */
 	justify-content: center;
-
 	padding: 16px 24px;
-
 	background: var(--surface-color);
 	border: 1px solid var(--stroke-color);
 	border-radius: 8px;
-
 	backdrop-filter: blur(4px);
 	-webkit-backdrop-filter: blur(4px);
-
 	text-decoration: none;
 	font-weight: 500; /* or bold */
-
 	transition: background 0.2s;
 }
 
@@ -180,4 +176,15 @@ footer {
 	padding: 24px 0;
 	text-align: center;
 	font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+	:root {
+		--bg-url: url(./assets/bg-desktop.jpg);
+	}
+
+	.light {
+		--bg-url: url(./assets/bg-desktop-light.jpg);
+	}
 }
