--- a/style.css
+++ b/style.css
@@ -73,9 +73,10 @@ body * {
 	filter: var(--img-filter);
 }
 
-#profile p {
+#profile h1 {
 	font-weight: 500;
 	line-height: 24px;
+	font-size: 16px;
 }
 
 /* switch */
