--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ ul {
 
 ul li a {
 	display: flex;
-	/* align-items: center; */
+	text-align: center;
 	justify-content: center;
 	padding: 16px 24px;
 	background: var(--surface-color);
